--- a/templates/bootstrap_form.html
+++ b/templates/bootstrap_form.html
@@ -106,7 +106,7 @@
 	<br>
     <main role="main" class="container" style="width:100%;">
 
-      <h3 style="margin-left:15px;font-size:30px;font-weight:bold;">Filter Students</h3>
+      <h3 style="margin-left:15px;font-size:30px;font-weight:bold;">Filter Students Matrix</h3>
 	  <hr/>
       <form method="GET" action="">
 		
