--- a/templates/bootstrap_form.html
+++ b/templates/bootstrap_form.html
@@ -31,6 +31,10 @@
 	<script type="text/javascript" src="//cdn.datatables.net/buttons/2.3.6/js/buttons.html5.min.js"></script>
 	<script type="text/javascript" src="//cdn.datatables.net/buttons/2.3.6/js/buttons.print.min.js"></script>
 	
+	
+	<script src="highcharts.js" type="text/javascript"></script>
+	<script src="jquery.highchartTable.js" type="text/javascript"></script>
+	
 	<style type="text/css">
 		.container{
 			margin-top: 5px;
@@ -97,7 +101,7 @@
 			color:black !important;
 		}
 		
-
+		
 	</style>
   </head>
 
@@ -110,16 +114,17 @@
 	  <hr/>
       <form method="GET" action="">
 		
-        <div class="form-row " style="margin-left:15px;"> 
+		<div class="form-row " style="margin-left:15px;"> 
           
             <label for="year" style="margin-right:5px;">Year</label>
             <select id="year-checkboxes" class="year" name="year" multiple >
-              {% for yr in fin_yr %}
+              {% for yr in fin_yr %}			  
 					<option  value="{{ yr }}">{{ yr }}</option>
               {% endfor %}
             </select>
-			<br />
+			<br />			
 			<input type="button" id="select_yr" name="select_all" value="Select All">
+			
 		  
             <label for="course" style="margin-left:5px;margin-right:5px;">Course</label>
             <select id="course-checkboxes"  name="course" multiple>
@@ -143,26 +148,47 @@
           
         </div>
 		</hr>
+		<p style="margin-left:20px;font-weight:bold;"><input type="checkbox" name="graph">Show Graph</p>
 		<br>
+		
         <div class="row div_class" >
 			<button id="srch" type="submit" style="font-size:20px;font-weight:bolder;margin-left:25px;"  class="btn btn-primary">Search</button>
 		</div>
+		
 	  </form>
 
-      
 	  <br>
-	  <br>
+			
+	 
 	  
 	  <p>Total intake :&nbsp {{qs_sum_intake}}</p>
 	  
 	  <p>Total strength :&nbsp {{qs_sum_strength}}</p>
 	  <br>
-	  <br>
+	  
+	  <div>
+		  Year   :  <p>{% if years_query %}
+		                 {{years_query}}
+					   {% endif %}
+					</p>
+		  Course :  <p>{% if course_query %}
+		                 {{course_query}}
+					   {% endif %}
+					</p>
+		  Faculty:  <p>{% if faculty_query %}
+		                 {{faculty_query}}
+					   {% endif %}
+					</p>		  
+	  </div>
+	  <div >
+	  </div>
 	  <hr />
 	  
 	  <div class="card shadow p-3 mb-5 bg-white rounded" style="max-width:100%;margin-top:5px;">
      
-		<table id="student" class = "table sts table-striped rounded shadow display" style="width:100% ">
+		<table id="student" class = "table sts table-striped rounded shadow display " style="width:100% ">
+				 
+				
 				
 				<h2 style="color:green;font-weight:bolder;font-size:30px;text-align:center">Student History Data</h2>
 				<thead class="sticky">
@@ -211,18 +237,21 @@
 
 	
   $(document).ready(function() {
-  
+	//$('#year-checkboxes').multiselect();
+	
 	$('#select_yr').click(function() {
-		$('#year-checkboxes option').prop('selected', true);
-	});
+		$('#year-checkboxes option').prop('selected', true);		
+	});	
 	
 	$('#select_course').click(function() {
-		$('#course-checkboxes option').prop('selected', true);
+		$('#course-checkboxes option').prop('selected', true);		
 	});
 	
 	$('#select_faculty').click(function() {
 		$('#faculty-checkboxes option').prop('selected', true);
 	});
+	
+	
 	
 	$('#student').DataTable({
 	
