--- a/templates/base.html
+++ b/templates/base.html
@@ -214,6 +214,10 @@
 						<li>                            
 							<a href="{% url 'student:student-create'%}">Create</a>
                         </li>
+						<li>                            
+							<a href="{% url 'student:student-edit'%}">Edit</a>
+                        </li>
+						
                         <li>
                             <a href="{% url 'student:chart1'%}">Chart View</a>
                         </li>
