--- a/templates/base.html
+++ b/templates/base.html
@@ -222,7 +222,30 @@
                             <a href="{% url 'student:chart1'%}">Chart View</a>
                         </li>
                         <li>
-                            <a href="#">Home 3</a>
+                            <a href="{% url 'student:modal-form' %}">Modal Form</a>
+                        </li>
+                    </ul>
+                </li>
+				<li>
+                    <a href="#">Break</a>
+                </li>
+				<li class="active">
+                    <a href="#prodSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Production</a>
+                    <ul class="collapse list-unstyled" id="prodSubmenu">
+                        <li>                            
+							<a href="#">Product Master</a>
+                        </li>
+						<li>                            
+							<a href="#">Prod 2</a>
+                        </li>
+						<li>                            
+							<a href="#">Prod 3</a>
+                        </li>						
+                        <li>
+                            <a href="#">Prod 4</a>
+                        </li>
+                        <li>
+                            <a href="#">Prod 5</a>
                         </li>
                     </ul>
                 </li>
