--- a/student_app/templates/student_app/edit_table_form.html
+++ b/student_app/templates/student_app/edit_table_form.html
@@ -23,6 +23,7 @@
 			margin-top: 5px;
 			margin-left: 20px;
 			font-size:20px;
+			width:100%;
 
 		}
 		.card-body{
@@ -133,10 +134,10 @@
  
 	<br>
 	
-    <main role="main" class="container" style="width:120%;">
+    <main role="main" class="container" >
 
       
-	  <div class="card shadow p-3 mb-5 bg-white rounded" style="max-width:120%;margin-top:5px;">
+	  <div class="card shadow p-3 mb-5 bg-white rounded" style="width:120%;margin-top:5px;">
 		<a class="btn btn-info" style="width:15%;" href="{% url 'student:student-create'%}">Add New</a>
 		
 		<table id="student" class = "table sts table-striped rounded shadow display " style="width:100% ">
