--- a/student_app/templates/student_app/edit_row.html
+++ b/student_app/templates/student_app/edit_row.html
@@ -1,9 +1,10 @@
-{% extends 'base.html' %}
-{% load static %}
 
 <!doctype html>
 <html lang="en">
 	{% block content %}
+	
+	{% include "student_app/edit_table_form.html" %}
+	
   <head>
   
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
