--- a/student_app/templates/student_app/student_delete.html
+++ b/student_app/templates/student_app/student_delete.html
@@ -13,7 +13,7 @@
 			<form method="POST">
 				
 				{% csrf_token %}
-				<a class="btn btn-warning" href="{% url 'student_app:student-edit' student.id %}">Cancel</a>
+				<a class="btn btn-warning" href="{% url 'student_app:student-edit' %}">Cancel</a>
 
 				<input class="btn btn-danger" type="submit" name="Confirm">
 			</form>
