--- a/student_app/templates/student_app/student_edit.html
+++ b/student_app/templates/student_app/student_edit.html
@@ -3,6 +3,15 @@
 {% block content %}
 <header>
 		<script src="//code.jquery.com/jquery-2.1.1.min.js"></script>
+
+	<style>
+	input[type=number]::-webkit-inner-spin-button, 
+    input[type=number]::-webkit-outer-spin-button { 
+           -webkit-appearance: none; 
+           margin: 0; 
+	}
+	</style>
+
 </header>
 
 <h1>Student data Edit</h1>
@@ -19,8 +28,8 @@
                 <th>Course_Name</th>
                 <th>Faculty</th>
                 <th>Courses</th>
-                <th>Intake</th>
-				<th>Strength</th>
+                <th style="width:5%;">Intake</th>
+				<th style="width:5%;">Strength</th>
 				
             </tr>
         </thead>
