--- a/templates/base.html
+++ b/templates/base.html
@@ -262,10 +262,10 @@
 							<a href="{% url 'product:select-customer' %}">New Sales Order</a>
                         </li>
                         <li>
-                            <a href="#">Order 1</a>
+                            <a href="{% url 'product:stock-create' %}">Stock Create</a>
                         </li>
 						<li>
-                            <a href="#">Order 2</a>
+                            <a href="{% url 'product:stock-list' %}">Stock View</a>
                         </li>
                     </ul>
                 </li>
