--- a/product/templates/product/new_sales.html
+++ b/product/templates/product/new_sales.html
@@ -62,40 +62,48 @@
             
             {% csrf_token %}
             {{ formset.management_form }}
-
-            <div class="panel-heading panel-heading-text" style="font-size: 2rem;"><u>Product Details</u></div>
-            
+    
+			{% block error_messages %}
+					
+			{% endblock error_messages %}
+			
+			{% if messages %}
+				<div class="alert alert-danger">
+					<ul>
+						{% for message in messages %}
+							<li>{{ message|safe }}</li>
+						{% endfor %}
+					</ul>
+				</div>
+			{% endif %}
+			
                 <div id="stockitem"> 
                     <div class="panel-body">
-                    {% for form in formset %}
-                        <div class="row form-row">
-                            <div class="form-group col-md-6">
-                                {{ form.stock.errors }}
-                                <label class="panel-body-text lbl">Belt No:</label>
-                                {{ form.stock }}
-                            </div><!-- Log on to codeastro.com for more projects -->
-                            <div class="form-group col-md-2">
-                                <label class="panel-body-text lbl">Price per item:</label>
-                                {{ form.perprice }}
-                            </div>
-                            <div class="form-group col-md-2">
-                                {{ form.quantity.errors }}
-                                <label class="panel-body-text lbl">Quantity:</label>
-                                {{ form.quantity }}
-                            </div><!-- Log on to codeastro.com for more projects -->
-                            <div class="form-group col-md-1">
-                                <label class="panel-body-text lbl">Price:</label>
-                                <input type="text" class="textinput form-control totalprice" value="1" disabled required>
-                            </div>
-                            <div class="form-group col-md-1">
-                                <label class="panel-body-text" style="color: #000">.</label>
-                                <button class="form-control btn btn-danger remove-form-row">-</button>
-                            </div>
-                        </div>
-                    {% endfor %}
-                        <div style="text-align: right;">                    
-                            <a href="#" class="add-form-row">+ Add More</a>
-                        </div>
+						<table>
+							<thead>
+								<th class="lbl" style="text-align: left;width:5%;">Row</th>
+								<th class="lbl" style="text-align: center;width:20%;">Belt No</th>
+								<th class="lbl" style="text-align: center;width:55%;">Description</th>								
+								<th class="lbl" style="text-align: center;width:10%;">Rate</th>
+								<th class="lbl" style="text-align: center;width:10%;">Quantity</th>
+							</thead>
+							<tbody>
+							
+								{% for form in formset %}
+									<tr>
+										<td>{{ forloop.counter }}</td>
+										<td>{{ form.stock }}</td>
+										<td>
+											 {{ form.stock_data.item_text }} 											
+										</td>
+										<td>{{ form.perprice }}</td>
+										<td>{{ form.quantity }}</td>
+									</tr>
+									 
+								{% endfor %}
+							</tbody>
+						</table>
+										
                     </div>
                 </div>
 
@@ -117,90 +125,7 @@
     <script type="text/javascript" src="{% static 'js/dialogbox.js' %}"></script>
     
 	<script type="text/javascript">
-        
-        //creates custom alert object
-        var custom_alert = new custom_alert();
-
-        function updateElementIndex(el, prefix, ndx) {
-            var id_regex = new RegExp('(' + prefix + '-\\d+)');
-            var replacement = prefix + '-' + ndx;
-            if ($(el).attr("for")) $(el).attr("for", $(el).attr("for").replace(id_regex, replacement));
-            if (el.id) el.id = el.id.replace(id_regex, replacement);
-            if (el.name) el.name = el.name.replace(id_regex, replacement);
-        }
-        
-        //stores the total no of item forms
-        var total = 1;
-
-        function cloneMore(selector, prefix) {
-            var newElement = $(selector).clone(true);
-            //var total = $('#id_' + prefix + '-TOTAL_FORMS').val();
-            newElement.find(':input:not([type=button]):not([type=submit]):not([type=reset])').each(function() {
-                var name = $(this).attr('name')
-                if(name) {
-                    name = name.replace('-' + (total-1) + '-', '-' + total + '-');
-                    var id = 'id_' + name;
-                    $(this).attr({'name': name, 'id': id}).val('').removeAttr('checked');
-                }
-            });
-            newElement.find('label').each(function() {
-                var forValue = $(this).attr('for');
-                if (forValue) {
-                forValue = forValue.replace('-' + (total-1) + '-', '-' + total + '-');
-                $(this).attr({'for': forValue});
-                }
-            });
-            total++;
-            $('#id_' + prefix + '-TOTAL_FORMS').val(total);
-            $(selector).after(newElement);
-            return false;
-        }
-        
-        function deleteForm(prefix, btn) {
-            //var total = parseInt($('#id_' + prefix + '-TOTAL_FORMS').val());
-            if (total > 1){
-                btn.closest('.form-row').remove();
-                var forms = $('.form-row');
-                $('#id_' + prefix + '-TOTAL_FORMS').val(forms.length);
-                for (var i=0, formCount=forms.length; i<formCount; i++) {
-                    $(forms.get(i)).find(':input').each(function() {
-                        updateElementIndex(this, prefix, i);
-                    });
-                }
-                total--;
-            } else {
-                custom_alert.render("Field cannot be deleted");
-            }
-            return false;
-        }
-        
-        $(document).on('click', '.add-form-row', function(e){
-            e.preventDefault();
-            cloneMore('.form-row:last', 'form');
-            return false;
-        });
-        
-        $(document).on('click', '.remove-form-row', function(e){
-            e.preventDefault();
-            deleteForm('form', $(this));
-            return false;
-        });
-
-
-        //updates the total price by multiplying 'price per item' and 'quantity' 
-        $(document).on('change', '.setprice', function(e){
-            e.preventDefault();
-            //gets the values
-            var element = $(this);
-            var quantity = element.parents('.form-row').find('.quantity').val();
-            var perprice = element.parents('.form-row').find('.price').val();
-            //calculates the total
-            var tprice = quantity * perprice;
-            //sets it to field
-            element.parents('.form-row').find('.totalprice').val(tprice);
-            return false;
-        });
-
+	
     </script>
 
 {% endblock content %}
