--- a/templates/base.html
+++ b/templates/base.html
@@ -344,17 +344,21 @@
                     </div>
                 </div>
             </nav>
+			
+			{% block error_messages %}
 			<div class="row">
                 <div class="col-md-12">
                 
                     {% if messages %}
                         {% for message in messages %}
-                            <div class="alert alert-{{ message.tags }}"> {{ message }} </div>
+                            <div class="alert alert-{{ message.tags }}"> {{ message|safe }} </div>
                         {% endfor %}
                     {% endif %}
-					
+				
+				
 				</div>
 			</div>	
+			{% endblock error_messages %}	
 			
 			{% block content %}
 			 	
